--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tech1",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -10,16 +9,20 @@
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "description": "",
   "dependencies": {
     "aos": "^2.3.4",
     "gsap": "^3.12.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.6",
+    "autoprefixer": "^10.4.19",
+    "cssnano": "^7.0.1",
     "eslint": "^7.32.0",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-plugin-import": "^2.24.2",
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "postcss": "^8.4.38"
   },
-  "type": "module"
+  "type": "module",
+  "description": ""
 }
